<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Joonas Niemi
  ~ 1909887
  -->

<resources>
    <string name="app_name">Guess That Word</string>
    <string name="your_current_language">Your current language</string>
    <string name="language_you_try_to_learn">Language you want to learn</string>
    <string name="play">Play</string>
    <string name="submit">Submit</string>
    <string name="wikipedia_link">&lt;a href=\"%1$s\"&gt;Wikipedia&lt;/a&gt;</string>
    <string name="select_language">Select language…</string>

    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="save">Save</string>
    <string name="main_menu">Main menu</string>
    <string name="ok">OK</string>

    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_text">Make sure that you are connected to internet, then try again.</string>

    <string name="correct_none">Aww too bad</string>
    <string name="correct_under_half">You did OK</string>
    <string name="correct_over_half">Nice job</string>
    <string name="correct_all">Excellent!</string>

    <string name="correct_text_none">You did not guess any words correct. Maybe next time</string>
    <string name="correct_text_some">You guessed %1$d of %2$d words correct</string>
    <string name="correct_text_all">You guessed every word correct! Congratulations!</string>

    <string name="total_guesses">Total guesses: %1$d</string>
    <string name="total_right_guesses">Right guesses: %1$d</string>
    <string name="total_words">Words: %1$d</string>

    <string name="guesses">Guesses: %1$d</string>
    <string name="right_guesses">Right guesses: %1$d</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="language_reminder">You need to set your language preferences in the settings before you are able to play.</string>
    <string name="inform_quitting_game">Do you really want to quit the game?</string>
</resources>