<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Joonas Niemi
  ~ 1909887
  -->

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.joonasniemi.wordquizproject.ui.stats.StatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/total_guesses_text"
            style="@style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:statTexts="@{viewModel.totalGuesses}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/total_guesses" />

        <TextView
            android:id="@+id/total_right_guesses_text"
            style="@style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:statTexts="@{viewModel.rightGuesses}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_guesses_text"
            tools:text="@string/total_right_guesses" />

        <TextView
            android:id="@+id/total_words_text"
            style="@style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:statTexts="@{viewModel.wordCount}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_right_guesses_text"
            tools:text="@string/total_words" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/words_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/very_big_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_words_text"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/word_recycler_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>